--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <meta property="og:title" content="XexoApp — SexyTraffic Finder">
   <meta property="og:description" content="Trova subito forum, club, saune e portali ADV per promuovere il tuo sexyshop.">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="https://droppaloitalia.github.io/Xexoapp/og-xexoapp.png">
+  <meta property="og:image" content="https://droppaloitalia.github.io/Xexoapp/header-banner.jpg">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:image" content="https://droppaloitalia.github.io/Xexoapp/og-xexoapp.png">
+  <meta name="twitter:image" content="https://droppaloitalia.github.io/Xexoapp/header-banner.jpg">
 
   <style>
     :root{
@@ -77,7 +77,7 @@
     .hero-right{border:1px solid var(--ring);border-radius:16px;overflow:hidden;background:#10121a;display:grid;place-items:center}
     .hero-art{width:100%;height:100%;min-height:160px; background:
       linear-gradient(180deg, rgba(255,77,109,.10), rgba(255,122,141,.06)),
-      url('./hero-xexo.jpg') center/cover no-repeat;}
+      url('./header-banner.jpg') center/cover no-repeat;}
 
     /* CARDS */
     .card{background:var(--card);border:1px solid var(--ring);border-radius:18px;padding:14px;display:grid;gap:10px}
@@ -214,22 +214,22 @@
       { id:404, nome:'Atlantis (AT)', categoria:'Saune Club', descr:'Sauna club', url:'https://www.saunaclub-atlantis.at', accetta:true, note:'AT' },
       { id:405, nome:'Margerita (SI)', categoria:'Saune Club', descr:'Sauna club', url:'https://margerita.si', accetta:true, note:'SI' },
 
-      // --- DIRECTORY (listoni utili, rimossi link rotti) ---
+      // --- DIRECTORY ---
       { id:601, nome:'Joyclub — Club & Eventi (EU)', categoria:'Directory', descr:'Sezione club Joyclub', url:'https://www.joyclub.com/magazine/en/club', accetta:true, note:'EU' },
       { id:602, nome:'Eventi swingers Italia (Google)', categoria:'Directory', descr:'Ricerca eventi/party IT', url:'https://www.google.com/search?q=eventi+swingers+italia+calendar', accetta:true, note:'Ricerca' },
 
-      // --- BLOG / MEDIA soft (no e-commerce) ---
+      // --- BLOG / MEDIA soft ---
       { id:701, nome:'Rolling Stone — sesso (IT)', categoria:'Blog', descr:'Sezione cultura/soft', url:'https://www.rollingstone.it/tag/sesso/', accetta:true, note:'IT' },
       { id:702, nome:'Wired — scienza/sessualità', categoria:'Blog', descr:'Contenuti informativi soft', url:'https://www.wired.it/search/?q=sesso', accetta:true, note:'IT' },
 
-      // --- MARKETPLACE (vetrina — verifica policy) ---
+      // --- MARKETPLACE ---
       { id:801, nome:'Amazon', categoria:'Marketplace', descr:'Ricerca prodotti / vetrina', url:'https://www.amazon.it/s?k=sex+toy', accetta:true, note:'Policy adult' },
       { id:802, nome:'eBay', categoria:'Marketplace', descr:'Ricerca prodotti / vetrina', url:'https://www.ebay.it/sch/i.html?_nkw=sex+toy', accetta:true, note:'Policy adult' },
       { id:803, nome:'Etsy', categoria:'Marketplace', descr:'Artigianale adult', url:'https://www.etsy.com/search?q=sex+toy', accetta:true, note:'Policy adult' },
       { id:804, nome:'Wish', categoria:'Marketplace', descr:'Ricerca prodotti', url:'https://www.wish.com/search/sex%20toy', accetta:true, note:'Policy adult' },
       { id:805, nome:'Alibaba (B2B)', categoria:'Marketplace', descr:'Fornitori / B2B', url:'https://www.alibaba.com/trade/search?SearchText=sex+toy', accetta:true, note:'B2B' },
 
-      // --- INFLUENCER / YT — HUB RICERCHE (poi aggiungi profili IT reali) ---
+      // --- INFLUENCER / YT — HUB RICERCHE ---
       { id:901, nome:'Instagram — sex toy IT', categoria:'Influencer', descr:'Cerca creator italiani', url:'https://www.google.com/search?q=site%3Ainstagram.com+sex+toy+review+italia', accetta:true, note:'Ricerca' },
       { id:902, nome:'TikTok — lingerie/sex toy IT', categoria:'Influencer', descr:'Cerca creator italiani', url:'https://www.google.com/search?q=site%3Atiktok.com+lingerie+sex+toy+recensione+italiano', accetta:true, note:'Ricerca' },
       { id:903, nome:'YouTube — sex toy IT', categoria:'YouTuber', descr:'Cerca canali/review IT', url:'https://www.youtube.com/results?search_query=sex+toy+recensione+italiano', accetta:true, note:'Ricerca' }
