--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       --brand:#ff4d6d; --brand-2:#ff7a8d; --accent:#ffd1d9;
       --ring:#262936;
       --radius:18px; --shadow:0 12px 30px rgba(0,0,0,.28);
+      --hero-img: none; /* verrà impostata via JS */
     }
     *{box-sizing:border-box}
     html,body{margin:0;background:var(--bg);color:var(--text);font:16px/1.45 system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Helvetica Neue",Arial}
@@ -75,9 +76,17 @@
     .banner h1{margin:0 0 6px;font-size:26px;letter-spacing:.3px}
     .banner p{margin:0;color:var(--muted)}
     .hero-right{border:1px solid var(--ring);border-radius:16px;overflow:hidden;background:#10121a;display:grid;place-items:center}
-    .hero-art{width:100%;height:100%;min-height:160px; background:
-      linear-gradient(180deg, rgba(255,77,109,.10), rgba(255,122,141,.06)),
-      url('./header-banner.jpg') center/cover no-repeat;}
+    .hero-art{
+      width:100%;height:100%;min-height:160px;
+      /* Fallback “fragola” + immagine dinamica via --hero-img */
+      background:
+        linear-gradient(180deg, rgba(255,77,109,.10), rgba(255,122,141,.06)),
+        var(--hero-img),
+        radial-gradient(800px 300px at 110% 50%, rgba(255,122,141,.12), transparent 60%),
+        linear-gradient(135deg,#1a1d28,#151822);
+      background-repeat:no-repeat,no-repeat,no-repeat,no-repeat;
+      background-position:center/cover, center/cover, center, center;
+    }
 
     /* CARDS */
     .card{background:var(--card);border:1px solid var(--ring);border-radius:18px;padding:14px;display:grid;gap:10px}
@@ -91,6 +100,12 @@
     footer{color:var(--muted);font-size:12px;padding:18px 6px 30px}
     .safe{font-size:12px;color:#cfcfe6}
     @media (max-width:480px){.logo-title{font-size:18px}}
+
+    /* Avviso immagine mancante */
+    .img-note{
+      position:fixed; right:10px; bottom:10px; background:#1a1d28; border:1px solid var(--ring);
+      color:#ffd1d9; padding:8px 10px; border-radius:10px; font-size:12px; display:none;
+    }
   </style>
 </head>
 <body>
@@ -159,6 +174,8 @@
       <div><strong>Note legali.</strong> XexoApp aggrega ricerche e collegamenti a siti terzi. Nessuna garanzia su risultati, approvazioni editoriali o disponibilità continuativa dei siti. Uso a discrezione dell’utente.</div>
     </footer>
   </div>
+
+  <div class="img-note" id="imgNote">Immagine header non trovata. Carica <code>header-banner.jpg</code> nella root del repo (rispetta maiuscole/minuscole).</div>
 
   <script>
     // ======= PRESET RAPIDI =======
@@ -308,9 +325,36 @@
       }
     }
 
+    // ======= HERO IMAGE LOADER (gestisce .jpg/.jpeg/.JPG/.JPEG + fallback) =======
+    (function(){
+      const candidates = [
+        'header-banner.jpg','header-banner.jpeg','header-banner.JPG','header-banner.JPEG',
+        'hero-xexo.jpg','hero-xexo.jpeg'
+      ];
+      function tryLoad(i){
+        if(i>=candidates.length){ // nessuna trovata
+          document.getElementById('imgNote').style.display='block';
+          return;
+        }
+        const src = './'+candidates[i];
+        const img = new Image();
+        img.onload = function(){
+          // imposta la variabile CSS --hero-img
+          document.documentElement.style.setProperty('--hero-img', `url('${src}')`);
+        };
+        img.onerror = function(){ tryLoad(i+1); };
+        img.src = src+'?v='+(Date.now()); // busta cache dopo commit
+      }
+      tryLoad(0);
+    })();
+
     // INIT
     renderPresets();
     renderCards();
   </script>
+
+  <noscript>
+    <div style="padding:10px;color:#ffd1d9">Attiva JavaScript per caricare l’immagine dell’header.</div>
+  </noscript>
 </body>
 </html>
