--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <meta name="description" content="XexoApp: directory rapida di forum, club, saune e portali ADV adult-friendly (focus Italia) per partnership e promozioni di sexy toys." />
   <meta name="robots" content="noindex,nofollow" />
 
+  <!-- PWA -->
+  <link rel="manifest" href="./manifest.json">
+  <meta name="theme-color" content="#ff4d6d">
+
   <!-- Favicon inline -->
   <link rel="icon" type="image/svg+xml"
         href='data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="256" height="256"><rect rx="48" ry="48" width="256" height="256" fill="%23ff4d6d"/><text x="50%" y="54%" text-anchor="middle" font-family="Arial, Helvetica, sans-serif" font-weight="800" font-size="120" fill="white">X</text></svg>'>
@@ -26,7 +30,8 @@
       --brand:#ff4d6d; --brand-2:#ff7a8d; --accent:#ffd1d9;
       --ring:#262936;
       --radius:18px; --shadow:0 12px 30px rgba(0,0,0,.28);
-      --hero-img: none; /* verrà impostata via JS */
+      --hero-img:none;         /* impostata via JS */
+      --hero-fit:cover;        /* cover|contain, toggle in alto */
     }
     *{box-sizing:border-box}
     html,body{margin:0;background:var(--bg);color:var(--text);font:16px/1.45 system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Helvetica Neue",Arial}
@@ -46,8 +51,8 @@
     nav{margin-left:auto;display:flex;gap:8px;flex-wrap:wrap}
     .navbtn{appearance:none;border:1px solid var(--ring);background:#1a1d28;color:#fff;border-radius:999px;padding:8px 12px;cursor:pointer;font-weight:600}
     .navbtn:hover{filter:brightness(1.08)}
-    .brand-right{display:flex;align-items:center;margin-left:8px}
-    .brand-right img{height:34px; width:auto; border-radius:8px; object-fit:contain; border:1px solid var(--ring); padding:4px}
+    .brand-right{display:flex;align-items:center;margin-left:8px;gap:8px}
+    .brand-right img{height:34px;width:auto;border-radius:8px;object-fit:contain;border:1px solid var(--ring);padding:4px}
 
     /* PANEL & BUTTONS */
     .panel{background:var(--panel);border:1px solid var(--ring);border-radius:var(--radius);box-shadow:var(--shadow)}
@@ -77,15 +82,15 @@
     .banner p{margin:0;color:var(--muted)}
     .hero-right{border:1px solid var(--ring);border-radius:16px;overflow:hidden;background:#10121a;display:grid;place-items:center}
     .hero-art{
-      width:100%;height:100%;min-height:160px;
-      /* Fallback “fragola” + immagine dinamica via --hero-img */
+      width:100%;height:100%;min-height:220px;
       background:
         linear-gradient(180deg, rgba(255,77,109,.10), rgba(255,122,141,.06)),
         var(--hero-img),
         radial-gradient(800px 300px at 110% 50%, rgba(255,122,141,.12), transparent 60%),
         linear-gradient(135deg,#1a1d28,#151822);
       background-repeat:no-repeat,no-repeat,no-repeat,no-repeat;
-      background-position:center/cover, center/cover, center, center;
+      background-position:center, center, center, center;
+      background-size:auto, var(--hero-fit), auto, auto;
     }
 
     /* CARDS */
@@ -129,6 +134,8 @@
         <a href="https://xexofranchising.com" target="_blank" rel="noopener">
           <img src="./xexo-logo.png" alt="xexofranchising.com" />
         </a>
+        <!-- TOGGLE HERO FIT -->
+        <button class="navbtn" id="fitBtn" title="Cambia adattamento immagine">Hero: COVER</button>
       </div>
     </header>
 
@@ -175,7 +182,7 @@
     </footer>
   </div>
 
-  <div class="img-note" id="imgNote">Immagine header non trovata. Carica <code>header-banner.jpg</code> nella root del repo (rispetta maiuscole/minuscole).</div>
+  <div class="img-note" id="imgNote">Immagine header non trovata. Carica <code>header-banner.jpg</code> / <code>hero-xexo.jpg</code> nella root (rispetta maiuscole).</div>
 
   <script>
     // ======= PRESET RAPIDI =======
@@ -188,7 +195,7 @@
 
     // ======= ELENCO LINK (NO COMPETITOR SHOP) =======
     const LINKS = [
-      // --- PORTALI ADV (ampliati, include i tuoi nuovi) ---
+      // --- PORTALI ADV ---
       { id:11, nome:'ExoClick', categoria:'Portali ADV', descr:'Rete adv adult/mainstream', url:'https://www.exoclick.com/advertisers/', accetta:true, note:'Self-serve' },
       { id:12, nome:'JuicyAds', categoria:'Portali ADV', descr:'Banner, native, pop', url:'https://www.juicyads.com/', accetta:true, note:'Self-serve' },
       { id:13, nome:'TrafficJunky', categoria:'Portali ADV', descr:'Network tube premium', url:'https://www.trafficjunky.com/', accetta:true, note:'Self-serve' },
@@ -205,13 +212,13 @@
       { id:34, nome:'Piccole Trasgressioni', categoria:'Portali ADV', descr:'Annunci/ADV', url:'https://www.piccoletrasgressioni.it/', accetta:true, note:'ADV available' },
       { id:35, nome:'OnlyFans (promo / collab)', categoria:'Portali ADV', descr:'Collaborazioni con creator', url:'https://onlyfans.com/', accetta:true, note:'Collab creator' },
 
-      // --- FORUM / COMMUNITY (IT/EU, no shop; rimossi i link rotti) ---
+      // --- FORUM / COMMUNITY ---
       { id:101, nome:'JOYclub (EU swingers)', categoria:'Forum', descr:'Community EU eventi e gruppi', url:'https://www.joyclub.com/', accetta:true, note:'Multi-lingua' },
       { id:102, nome:'Forum Italia Naturista (A.N.ITA.)', categoria:'Forum', descr:'Forum ufficiale A.N.ITA.', url:'https://forum.italianaturista.it/', accetta:true, note:'IT' },
       { id:103, nome:'iNudisti – Forum', categoria:'Forum', descr:'Grande community naturista', url:'https://www.inudisti.it/forum/', accetta:true, note:'IT' },
       { id:104, nome:'eXtraVillage – Naturismo', categoria:'Forum', descr:'Sezione naturismo', url:'https://forum.extravillage.it/viewforum.php?f=38', accetta:true, note:'IT' },
 
-      // --- BDSM (community/risorse, no shop) ---
+      // --- BDSM ---
       { id:201, nome:'FetLife', categoria:'BDSM', descr:'Community mondiale (login)', url:'https://fetlife.com/', accetta:true, note:'EN' },
       { id:202, nome:'Gabbia.com', categoria:'BDSM', descr:'Community & risorse IT', url:'https://www.gabbia.com/', accetta:true, note:'IT' },
 
@@ -246,7 +253,7 @@
       { id:804, nome:'Wish', categoria:'Marketplace', descr:'Ricerca prodotti', url:'https://www.wish.com/search/sex%20toy', accetta:true, note:'Policy adult' },
       { id:805, nome:'Alibaba (B2B)', categoria:'Marketplace', descr:'Fornitori / B2B', url:'https://www.alibaba.com/trade/search?SearchText=sex+toy', accetta:true, note:'B2B' },
 
-      // --- INFLUENCER / YT — HUB RICERCHE ---
+      // --- INFLUENCER / YT ---
       { id:901, nome:'Instagram — sex toy IT', categoria:'Influencer', descr:'Cerca creator italiani', url:'https://www.google.com/search?q=site%3Ainstagram.com+sex+toy+review+italia', accetta:true, note:'Ricerca' },
       { id:902, nome:'TikTok — lingerie/sex toy IT', categoria:'Influencer', descr:'Cerca creator italiani', url:'https://www.google.com/search?q=site%3Atiktok.com+lingerie+sex+toy+recensione+italiano', accetta:true, note:'Ricerca' },
       { id:903, nome:'YouTube — sex toy IT', categoria:'YouTuber', descr:'Cerca canali/review IT', url:'https://www.youtube.com/results?search_query=sex+toy+recensione+italiano', accetta:true, note:'Ricerca' }
@@ -256,8 +263,10 @@
     let currentCat = 'all';
     let showFavOnly = false;
     const favKey = 'xexo_favs_v1';
+    const fitKey = 'xexo_fit_v1';
     const $ = sel => document.querySelector(sel);
     const $all = sel => Array.from(document.querySelectorAll(sel));
+
     function applyPreset(tpl){ window.open(tpl, '_blank'); }
     function jump(cat){
       const pill = Array.from(document.querySelectorAll('.pill')).find(p=>p.dataset.cat===cat);
@@ -325,32 +334,54 @@
       }
     }
 
-    // ======= HERO IMAGE LOADER (gestisce .jpg/.jpeg/.JPG/.JPEG + fallback) =======
+    // ======= HERO IMAGE LOADER + TOGGLE COVER/CONTAIN =======
     (function(){
       const candidates = [
         'header-banner.jpg','header-banner.jpeg','header-banner.JPG','header-banner.JPEG',
         'hero-xexo.jpg','hero-xexo.jpeg'
       ];
       function tryLoad(i){
-        if(i>=candidates.length){ // nessuna trovata
+        if(i>=candidates.length){
           document.getElementById('imgNote').style.display='block';
           return;
         }
         const src = './'+candidates[i];
         const img = new Image();
         img.onload = function(){
-          // imposta la variabile CSS --hero-img
           document.documentElement.style.setProperty('--hero-img', `url('${src}')`);
         };
         img.onerror = function(){ tryLoad(i+1); };
-        img.src = src+'?v='+(Date.now()); // busta cache dopo commit
+        img.src = src+'?v='+(Date.now());
       }
       tryLoad(0);
+
+      // toggle fit + persistenza
+      const fitBtn = document.getElementById('fitBtn');
+      const savedFit = localStorage.getItem(fitKey) || 'cover';
+      setFit(savedFit);
+
+      fitBtn.addEventListener('click', ()=>{
+        const next = (localStorage.getItem(fitKey)==='cover') ? 'contain' : 'cover';
+        setFit(next);
+      });
+
+      function setFit(val){
+        document.documentElement.style.setProperty('--hero-fit', val);
+        localStorage.setItem(fitKey, val);
+        fitBtn.textContent = 'Hero: ' + val.toUpperCase();
+      }
     })();
 
-    // INIT
+    // ======= INIT =======
     renderPresets();
     renderCards();
+
+    // ======= SERVICE WORKER (PWA) =======
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('./service-worker.js');
+      });
+    }
   </script>
 
   <noscript>
