--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
   <meta name="description" content="XexoApp: directory rapida di forum, club, saune e portali ADV adult-friendly (focus Italia) per partnership e promozioni di sexy toys." />
   <meta name="robots" content="noindex,nofollow" />
 
-  <!-- PWA -->
+  <!-- PWA base -->
   <link rel="manifest" href="./manifest.json">
   <meta name="theme-color" content="#ff4d6d">
+
+  <!-- iOS PWA -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <link rel="apple-touch-icon" sizes="180x180" href="icons/icon-180.png">
 
   <!-- Favicon inline -->
   <link rel="icon" type="image/svg+xml"
@@ -28,10 +33,8 @@
       --bg:#0d0e12; --panel:#14161d; --card:#171923;
       --muted:#a7adbb; --text:#f5f7fb;
       --brand:#ff4d6d; --brand-2:#ff7a8d; --accent:#ffd1d9;
-      --ring:#262936;
-      --radius:18px; --shadow:0 12px 30px rgba(0,0,0,.28);
-      --hero-img:none;         /* impostata via JS */
-      --hero-fit:cover;        /* cover|contain, toggle in alto */
+      --ring:#262936; --radius:18px; --shadow:0 12px 30px rgba(0,0,0,.28);
+      --hero-img:none; --hero-fit:cover;
     }
     *{box-sizing:border-box}
     html,body{margin:0;background:var(--bg);color:var(--text);font:16px/1.45 system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Helvetica Neue",Arial}
@@ -48,9 +51,22 @@
       display:grid;place-items:center;box-shadow:var(--shadow);font-weight:800}
     .logo-title{font-size:22px;font-weight:800;letter-spacing:.3px}
     .sub{color:var(--muted);font-size:12px}
-    nav{margin-left:auto;display:flex;gap:8px;flex-wrap:wrap}
-    .navbtn{appearance:none;border:1px solid var(--ring);background:#1a1d28;color:#fff;border-radius:999px;padding:8px 12px;cursor:pointer;font-weight:600}
+
+    /* NAV: orizzontale su mobile con scroll, wrap su desktop */
+    nav{
+      margin-left:auto; display:flex; gap:8px;
+      flex-wrap:nowrap; overflow-x:auto; -webkit-overflow-scrolling:touch;
+      scrollbar-width:none;  /* Firefox */
+      max-width:52vw;        /* evita che vada a capo su mobile */
+    }
+    nav::-webkit-scrollbar{ display:none } /* Chrome/Safari */
+    .navbtn{flex:0 0 auto; appearance:none;border:1px solid var(--ring);background:#1a1d28;color:#fff;border-radius:999px;padding:8px 12px;cursor:pointer;font-weight:600; white-space:nowrap}
     .navbtn:hover{filter:brightness(1.08)}
+    @media (min-width:900px){
+      nav{flex-wrap:wrap; overflow:visible; max-width:none}
+      .navbtn{flex:initial}
+    }
+
     .brand-right{display:flex;align-items:center;margin-left:8px;gap:8px}
     .brand-right img{height:34px;width:auto;border-radius:8px;object-fit:contain;border:1px solid var(--ring);padding:4px}
 
@@ -106,13 +122,13 @@
     .safe{font-size:12px;color:#cfcfe6}
     @media (max-width:480px){.logo-title{font-size:18px}}
 
-    /* Avviso immagine mancante */
     .img-note{
       position:fixed; right:10px; bottom:10px; background:#1a1d28; border:1px solid var(--ring);
       color:#ffd1d9; padding:8px 10px; border-radius:10px; font-size:12px; display:none;
     }
   </style>
 </head>
+
 <body>
   <div class="container">
     <header>
