--- a/index.html
+++ b/index.html
@@ -42,30 +42,60 @@
     .container{max-width:1100px;margin:0 auto;padding:20px}
 
     /* HEADER + MENU */
-    header{display:flex;align-items:center;gap:16px;position:sticky;top:0;z-index:20;
-      background:linear-gradient(180deg, rgba(13,14,18,.92) 60%, rgba(13,14,18,0));
-      backdrop-filter: blur(6px); padding:14px 0 10px}
-    .logo{display:flex;align-items:center;gap:10px}
-    .logo-badge{width:40px;height:40px;border-radius:12px;
-      background:linear-gradient(135deg,var(--brand),var(--brand-2));
-      display:grid;place-items:center;box-shadow:var(--shadow);font-weight:800}
-    .logo-title{font-size:22px;font-weight:800;letter-spacing:.3px}
-    .sub{color:var(--muted);font-size:12px}
+    /* HEADER + MENU */
+header{
+  display:flex; align-items:center; gap:16px; position:sticky; top:0; z-index:20;
+  background:linear-gradient(180deg, rgba(13,14,18,.92) 60%, rgba(13,14,18,0));
+  backdrop-filter: blur(6px); padding:14px 0 10px;
+}
+.logo{display:flex;align-items:center;gap:10px}
+.logo-badge{width:40px;height:40px;border-radius:12px;
+  background:linear-gradient(135deg,var(--brand),var(--brand-2));
+  display:grid;place-items:center;box-shadow:var(--shadow);font-weight:800}
+.logo-title{font-size:22px;font-weight:800;letter-spacing:.3px}
+.sub{color:var(--muted);font-size:12px}
 
-    /* NAV: orizzontale su mobile con scroll, wrap su desktop */
-    nav{
-      margin-left:auto; display:flex; gap:8px;
-      flex-wrap:nowrap; overflow-x:auto; -webkit-overflow-scrolling:touch;
-      scrollbar-width:none;  /* Firefox */
-      max-width:52vw;        /* evita che vada a capo su mobile */
-    }
-    nav::-webkit-scrollbar{ display:none } /* Chrome/Safari */
-    .navbtn{flex:0 0 auto; appearance:none;border:1px solid var(--ring);background:#1a1d28;color:#fff;border-radius:999px;padding:8px 12px;cursor:pointer;font-weight:600; white-space:nowrap}
-    .navbtn:hover{filter:brightness(1.08)}
-    @media (min-width:900px){
-      nav{flex-wrap:wrap; overflow:visible; max-width:none}
-      .navbtn{flex:initial}
-    }
+/* NAV desktop default */
+nav{
+  margin-left:auto; display:flex; gap:8px;
+  flex-wrap:wrap; overflow:visible; max-width:none;
+}
+.navbtn{
+  display:inline-flex; align-items:center; justify-content:center;
+  flex:0 0 auto; white-space:nowrap;
+  appearance:none; border:1px solid var(--ring); background:#1a1d28; color:#fff;
+  border-radius:999px; padding:8px 12px; cursor:pointer; font-weight:600;
+}
+.navbtn:hover{filter:brightness(1.08)}
+
+.brand-right{display:flex;align-items:center;margin-left:8px;gap:8px}
+.brand-right img{height:34px;width:auto;border-radius:8px;object-fit:contain;border:1px solid var(--ring);padding:4px}
+
+/* --- MOBILE FIX: nav a tutta larghezza con scroll orizzontale --- */
+@media (max-width: 900px){
+  header{
+    display:grid;
+    grid-template-columns: 1fr auto;
+    grid-auto-rows:auto;
+    row-gap:8px;
+    align-items:center;
+  }
+  .logo{grid-column:1/2}
+  .brand-right{grid-column:2/3; justify-self:end}
+  nav{
+    grid-column:1/-1;               /* nav su una riga sotto */
+    order:3;
+    display:flex; gap:8px;
+    overflow-x:auto;                /* scroll orizzontale */
+    -webkit-overflow-scrolling:touch;
+    scrollbar-width:none;           /* Firefox */
+    width:100%;
+    padding-bottom:4px;
+  }
+  nav::-webkit-scrollbar{display:none} /* Chrome/Safari */
+  .navbtn{flex:0 0 auto}
+}
+
 
     .brand-right{display:flex;align-items:center;margin-left:8px;gap:8px}
     .brand-right img{height:34px;width:auto;border-radius:8px;object-fit:contain;border:1px solid var(--ring);padding:4px}
