--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
     a{color:inherit;text-decoration:none}
     .container{max-width:1100px;margin:0 auto;padding:20px}
 
-    /* HEADER + MENU */
+    /* ===== HEADER + MENU (layout robusto) ===== */
     header{
-      display:flex; align-items:center; gap:16px; position:sticky; top:0; z-index:20;
+      display:grid; align-items:center; column-gap:12px; row-gap:8px;
+      grid-template-columns: auto 1fr auto;   /* logo | nav | brand */
+      position:sticky; top:0; z-index:20;
       background:linear-gradient(180deg, rgba(13,14,18,.92) 60%, rgba(13,14,18,0));
       backdrop-filter: blur(6px); padding:14px 0 10px;
     }
@@ -54,17 +56,19 @@
     .logo-title{font-size:22px;font-weight:800;letter-spacing:.3px}
     .sub{color:var(--muted);font-size:12px}
 
-    /* NAV: sempre orizzontale; su mobile scrolla lateralmente */
+    /* NAV: SEMPRE orizzontale, scorrevole; se va a capo: allineato a sinistra */
     #topnav{
-      margin-left:auto; display:flex; gap:8px;
-      flex-wrap:nowrap;                    /* non andare a capo */
-      overflow-x:auto; overflow-y:hidden;  /* scroll orizzontale */
+      grid-column:2/3;
+      display:flex; gap:8px;
+      flex-wrap:nowrap;                  /* evita colonna */
+      overflow-x:auto; overflow-y:hidden;
       -webkit-overflow-scrolling:touch;
-      scrollbar-width:none;                /* Firefox */
+      scrollbar-width:none;
       max-width:100%;
       white-space:nowrap;
+      justify-content:flex-start;        /* allinea a sinistra */
     }
-    #topnav::-webkit-scrollbar{ display:none } /* Chrome/Safari */
+    #topnav::-webkit-scrollbar{ display:none }
     .navbtn{
       display:inline-flex; align-items:center; justify-content:center;
       flex:0 0 auto; white-space:nowrap;
@@ -73,10 +77,27 @@
     }
     .navbtn:hover{filter:brightness(1.08)}
 
-    .brand-right{display:flex;align-items:center;margin-left:8px;gap:8px}
+    .brand-right{
+      grid-column:3/4;
+      display:flex;align-items:center;gap:8px; justify-self:end;
+    }
     .brand-right img{height:34px;width:auto;border-radius:8px;object-fit:contain;border:1px solid var(--ring);padding:4px}
 
-    /* PANEL & BUTTONS */
+    /* Su schermi stretti: nav occupa una riga intera sotto il logo, ma resta orizzontale */
+    @media (max-width: 780px){
+      header{
+        grid-template-columns: 1fr auto;   /* logo | brand */
+        grid-auto-rows:auto;
+      }
+      .logo{grid-column:1/2}
+      .brand-right{grid-column:2/3}
+      #topnav{
+        grid-column:1/-1;             /* nav sotto, a tutta larghezza */
+        order:3;
+      }
+    }
+
+    /* ===== PANEL & BUTTONS ===== */
     .panel{background:var(--panel);border:1px solid var(--ring);border-radius:var(--radius);box-shadow:var(--shadow)}
     .grid{display:grid;gap:14px}
     .grid-presets{grid-template-columns:repeat(auto-fill,minmax(170px,1fr))}
@@ -90,7 +111,7 @@
     .pill.active{outline:2px solid var(--brand)}
     .sep{height:1px;background:linear-gradient(90deg,transparent,rgba(255,255,255,.08),transparent);margin:8px 0}
 
-    /* HERO */
+    /* ===== HERO ===== */
     .hero{padding:18px}
     .hero-wrap{display:grid;gap:18px;grid-template-columns:1.6fr .9fr}
     @media (max-width:900px){.hero-wrap{grid-template-columns:1fr}}
@@ -115,7 +136,7 @@
       background-size:auto, var(--hero-fit), auto, auto;
     }
 
-    /* CARDS */
+    /* ===== CARDS ===== */
     .card{background:var(--card);border:1px solid var(--ring);border-radius:18px;padding:14px;display:grid;gap:10px}
     .card h4{margin:0;font-size:16px}
     .meta{color:var(--muted);font-size:13px}
@@ -146,7 +167,7 @@
         </div>
       </div>
 
-      <!-- NAV con id per regole mirate -->
+      <!-- NAV orizzontale con scroll; se va a capo resta allineato a sinistra -->
       <nav id="topnav">
         <button class="navbtn" onclick="jump('Portali ADV')">Portali ADV</button>
         <button class="navbtn" onclick="jump('Forum')">Forum</button>
@@ -168,7 +189,7 @@
       <div class="hero-wrap">
         <div class="hero-left">
           <div class="banner">
-            <h1>PROMUOVI I TUOI SEXY TOYS IN 1 TAP</h1>
+            <h1>PROMUOVI I TUOI SEXY TOYS IN 1 APP</h1>
             <p>Tutto ciò che serve per contattare community, club, saune e reti ADV. Soft-safe, niente contenuti espliciti.</p>
           </div>
           <div id="presetWrap" class="grid grid-presets"></div>
